# synaps1

./: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.production.yml  docker-compose.yml  hardhat.config.js  nginx.conf  package.json
admin-dashboard/: package.json
bots/: liquidation-bot.js
cli/: index.js  package.json  synapse-cli.js
contracts/: Governance.sol  PaymentChannel.sol  PaymentRouter.sol  ReputationRegistry.sol  ServiceRegistry.sol  StakingRewards.sol  SubscriptionManager.sol  SynapseAchievements.sol  SynapseAchievementsNFT.sol  SynapseAirdrop.sol  SynapseBridge.sol  SynapseFeeDistributor.sol  SynapseFlashLoan.sol  SynapseInsurance.sol  SynapseLaunchpad.sol  SynapseLending.sol  SynapseLiquidityPool.sol  SynapseMultiSig.sol  SynapseNFTLending.sol  SynapseNFTMarketplace.sol  SynapseOptions.sol  SynapseOracle.sol  SynapsePerpetual.sol  SynapsePrediction.sol  SynapsePriceFeed.sol  SynapseReferral.sol  SynapseSynthetic.sol  SynapseTimelock.sol  SynapseToken.sol  SynapseTreasury.sol  SynapseVault.sol  SynapseYieldFarm.sol  TokenVesting.sol
docs/: CNAME  DEPLOYMENT.md  DEVELOPER_GUIDE.md  SDK_REFERENCE.md  SECURITY_AUDIT_CHECKLIST.md  USER_GUIDE.md  WHITEPAPER.md  _config.yml  index.html  openapi.yaml
examples/: ai-agent-integration.js  claude-integration.js  openai-integration.js
frontend/: index.html
k8s/: deployment.yaml
loadtest/: loadtest.js
middleware/: rate-limiter.js
migrations/: 001_initial_schema.sql
monitoring/: alerts.yml  (+1 more)
sdk-rust/: Cargo.toml
sdk-rust/src/: lib.rs
(+102 files in other folders)
