[package]
name = "synapse-sdk"
version = "1.0.0"
edition = "2021"
authors = ["SYNAPSE Protocol Team"]
description = "Rust SDK for SYNAPSE Protocol - AI-to-AI Payment Infrastructure"
license = "MIT"
repository = "https://github.com/synapse-protocol/sdk-rust"
documentation = "https://docs.synapse-protocol.ai/sdk/rust"
keywords = ["blockchain", "ai", "payments", "ethereum", "web3"]
categories = ["cryptography", "api-bindings"]

[dependencies]
ethers = { version = "2.0", features = ["abigen", "rustls"] }
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
hex = "0.4"
log = "0.4"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"

[features]
default = ["rustls"]
rustls = ["ethers/rustls"]
openssl = ["ethers/openssl"]

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "payment_agent"
path = "examples/payment_agent.rs"
